--- a/style.css
+++ b/style.css
@@ -164,3 +164,60 @@ body, html {
 .footer {
     clear: both;
 }
+
+@keyframes fun {
+    0% {
+        transform:scale(1) rotate(0deg);
+    }
+    100% {
+        transform:scale(1.1) rotate(10deg);
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    .body {
+        display: block;
+    }
+    .main {
+        width: 100%
+    }
+    .main .container {
+        overflow: hidden;
+    }
+    .sidebar {
+        width: 100%
+    }
+}
+
+@media screen and (max-width: 740px) {
+    .container {
+        padding: 0 20px;
+    }
+    .article {
+        padding-left: 0;
+    }
+    .article-img {
+        position: static;
+        margin-bottom: 1rem;
+        width: 100%;
+        display: block;
+    }
+}
+
+@media screen and (max-width: 860px) {
+    .topbar {
+        position: absolute;
+    }
+    .topbar nav, .social {
+        float:none;
+        text-align: center;
+    }
+    .topbar nav {
+        margin-bottom: 15px;
+    }
+    .topbar nav a {
+        display: inline-block;
+        margin: 0 20px 15px 20px;
+        white-space: nowrap;
+    }
+}
